--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To-Do app</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+</head>
+<body>
+    <div style="margin-top: 50px;" class="ui container">
+        <h1 class="ui center aligned header">Todo App</h1>
+        <form class="ui form" action="/add" method="post">
+            <div class="field">
+                <label for="Title">Task title</label>
+                <input type="text" name="title" placeholder="Enter task...">
+                <br>
+                <br>
+                <button class="ui blue button" type="submit">Add</button>
+            </div>
+        </form>
 
+        {% for todo in todo_list %}
+        <div class="ui segment">
+            <p class="ui big header">{{todo.id}} | {{todo.title}}</p>
+
+            <!-- For complete and not complete -->
+            {% if todo.complete == False%}
+            <span class="ui gray label">Not Complete</span>
+            {% else %}
+            <span class="ui green label">Complete</span>
+            {% endif %}
+
+            <a class="ui blue button" href="/update/{{todo.id}}">Update</a>
+            <a class="ui red button" href="/delete/{{todo.id}}">Delete</a>
+        </div>
+        {% endfor %}
+
+        <footer>
+            <p>Created by: Sumedha Zaware<br>
+        </footer>
+    </div>
+</body>
+</html>
